src/test/ui/parser/issue-24375.stderr
error: expected one of `=>`, `@`, `if`, or `|`, found `[`
  --> $DIR/issue-24375.rs:6:12
   |
LL |         tmp[0] => {}
   |            ^ expected one of `=>`, `@`, `if`, or `|` here

error: aborting due to previous error

